# Numerus

./: .gcovr.cfg  CMakeLists.txt  README.md  buildit.sh
docs/: CMakeLists.txt
include/: BigInt.hpp  Numerus.hpp  fft.h  maths.h
src/: BigInt.cpp  CMakeLists.txt  Numerus.cpp  cpp.txt  cryptome.cpp  driver.cpp  dungeon.py  fft.cpp  maths.cpp  prime_boss.cpp  prime_boss_no_locking.cpp  python3.txt  templatized_prime_boss_no_locking.cpp  thrash.py
src/python/: delta.py  delta_delta_encoding.py  fast_segmented_sieve.py  fftcrypt.py  gemini_schonhage_strassen.py  gemini_ss_unit_tests.py  karatsuba.py  multithreaded_segmented_sieve.py  prime_boss.py  save_delta_encoded_primes.py  schonhage_strassen.py  segmented_sieve.py  segmeted_sieve_with_saving_to_disk.py  thrash.py  wheel_segmented_sieve.py
tests/: BigIntUnitTest.cpp  CMakeLists.txt
tests/testdata/: schonhage_strassen_testdata.ipynb  test1_ss_1000000_digits.txt  x1000000igits.txt  y1000000igits.txt  z2000000igits.txt
